# Tuya-Daemon

./: Makefile  README.md
files/etc/init.d/: tuya-espd
src/: CMakeLists.txt  tuya_cacert.h
tuya-daemon/: README.md
tuya-daemon/files/etc/config/: tuya_espd
tuya-daemon/src/: action.c  action.h  app.h  argp_parser.c  argp_parser.h  config.h  daemon.c  daemon.h  main.c  mqtt.h  mqtt_callbacks.c  mqtt_callbacks.h  ubus_invoke.c  ubus_invoke.h
